@@ -1,3 +1,8 @@
+2017-01-25  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/79179
+	* gcc.target/powerpc/pr79179.c: New test.
+
 2017-01-25  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/vsx-elemrev-4.c: Change expected code
